fix nav back button z-index

--- a/src/app/projects/projects.less
+++ b/src/app/projects/projects.less
@@ -38,7 +38,7 @@
 nav.back {
   position: relative;
   clear: both;
-  z-index: 1000;
+  z-index: 999;
 
   a {
     display: inline-block;
